fixed margins for full post on mobile

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -102,4 +102,8 @@
         font-family: 'Bitter', serif;
         font-size: 20px;
     }
+
+    @include media($mediaMinWidth){
+        margin: 20px;
+    }
 }
